--- a/05 array/index.html
+++ b/05 array/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
+        <h1>header1</h1>
+        <h1>header2</h1>
+        <h1>header3</h1>
+        <h1>header4</h1>
+        <h1>header5</h1>
+        <h1 class="bandName">Docent 1</h1>
+        <h1 class="bandName">Docent 2</h1>
+        <h1 class="bandName">Docent 3</h1>
+        <h1 class="huh?">Huh?</h1>
         <Script type="module" defer src="app.js"> </Script>
-    </head>
+    </header>
 <body>
 </body>
 </html>
