--- a/05 array/index.html
+++ b/05 array/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <h1>header1</h1>
-        <h1>header2</h1>
-        <h1>header3</h1>
-        <h1>header4</h1>
-        <h1>header5</h1>
+        <h1 class="test">header1</h1>
+        <h1 class="test">header2</h1>
+        <h1 class="test">header3</h1>
+        <h1 class="test">header4</h1>
+        <h1 class="test">header5</h1>
         <h1 class="bandName">Docent 1</h1>
         <h1 class="bandName">Docent 2</h1>
         <h1 class="bandName">Docent 3</h1>
